# math-hw-proj

./: .gitignore  CMakeLists.txt  README.md
3rd/imgui/: CMakeLists.txt
3rd/sqlite/: CMakeLists.txt
cmake/: FindD3d11.cmake
dataset/: data.csv
docs/: ahw_附录20：绵阳市某中学高一（1）班优秀学生评选241214144619.docx  algorithm_design.drawio
examples/: CMakeLists.txt  regression_tree.cpp
scripts/: data_preprocessing.py
src/app/: dataframe.cpp  dataframe.hpp  db.cpp  db.hpp  logger.cpp  logger.hpp  main.cpp  regression_tree.cpp  regression_tree.hpp  series.cpp  series.hpp  student.cpp  student.hpp  to_csv.cpp  to_csv.hpp  utility.cpp  utility.hpp
src/app/ui/: main_window.cpp  main_window.hpp  ui.cpp  ui.hpp
src/imgui-demo/: main.cpp
